<resources>
    <string name="app_name">trabalho_final</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Vacinação Covid</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="edita_enfermeiro_fragment_label">Editar Enfermeiro</string>

    <string name="menu_home">Home</string>
    <string name="menu_enfermeiros">Enfermeiros</string>
    <string name="menu_pessoas">Pessoas</string>
    <string name="menu_vacinas">Vacinas</string>
    <string name="novo_enfermeiro">Novo Enfermeiro</string>
    <string name="alterar_enfermeiro">Alterar Enfermeiro</string>
    <string name="eliminar_enfermeiro">Eliminar Enfermeiro</string>
    <string name="elimina_enfermeiro_fragment_label">Eliminar enfermeiro?</string>
    <string name="nova_pessoa">Nova Pessoa</string>
    <string name="alterar_pessoa">Alterar Pessoa</string>
    <string name="eliminar_pessoa">Eliminar Pessoa</string>
    <string name="eliminar_vacina">Eliminar Vacina</string>
    <string name="elimina_pessoa_fragment_label">Eliminar pessoa?</string>
    <string name="novo">Novo</string>
    <string name="alterar">Alterar</string>
    <string name="eliminar">Eliminar</string>
    <string name="nome">Nome</string>
    <string name="contacto">Contacto</string>
    <string name="morada">Morada</string>
    <string name="data">Data</string>
    <string name="quantidade">Quantidade</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>

    <string name="preencha_Nome">Preencha o Nome</string>
    <string name="nome_semLetras">Nome não pode conter números</string>
    <string name="preencha_Contacto">Preencha o Contacto</string>
    <string name="Contacto_NoveDigitos">O Contacto tem de ter 9 dígitos</string>
    <string name="preencha_Morada">Preencha a Morada</string>
    <string name="preencha_Data">Preencha a Data</string>
    <string name="preencha_Hora">Preencha a Hora</string>
    <string name="preencha_Quantidade">Preencha a Quantidade</string>
    <string name="erro_inserir_enfermeiro">Erro ao inserir enfermeiro</string>
    <string name="erro_alterar_enfermeiro">Erro ao alterar enfermeiro</string>
    <string name="enfermeiro_guardado_sucesso">Enfermeiro guardado com sucesso</string>
    <string name="erro_eliminar_enfermeiro">Erro ao eliminar enfermeiro</string>
    <string name="erro_eliminar_pessoa">Erro ao eliminar pessoa</string>
    <string name="enfermeiro_eliminado_sucesso">Enfermeiro eliminado com sucesso</string>
    <string name="pessoa_eliminada_sucesso">Pessoa eliminada com sucesso</string>
    <string name="campo_cc">Campo CC</string>
    <string name="erro_inserir_vacina">Erro ao inserir vacina</string>
    <string name="vacina_guardado_sucesso">Vacina guardada com sucesso</string>
    <string name="erro_alterar_vacina">Erro ao alterar Vacina</string>
    <string name="erro_eliminar_vacina">Erro ao eliminar Vacina</string>
    <string name="vacina_eliminada_sucesso">Vacina eliminada com sucesso</string>
    <string name="erro_alterar_dose">Erro ao alterar Dose</string>
    <string name="erro_eliminar_dose">Erro ao eliminar Dose</string>
    <string name="dose_eliminado_sucesso">Dose eliminada com sucesso</string>

    <string name="erro_inserir_dose">Erro ao inserir dose</string>
    <string name="dose_guardado_sucesso">Dose guardada com sucesso</string>

    <string name="preencha_DataNascimento">Preencha a Data de Nascimento</string>
    <string name="data_erro_tamanho">Tamanho da Data incorreto (DDMMAAAA)</string>
    <string name="erro_dia">Dia tem de estar entre 1 e 31</string>
    <string name="erro_mes">Mês tem de estar entre 1 e 12</string>
    <string name="erro_ano">Ano inválido</string>
    <string name="hora_erro_tamanho">Tamanho da Hora incorreto (HHMM)</string>
    <string name="erro_hora">Hora tem de estar entre 0 e 23</string>
    <string name="erro_minutos">Minutos tem de estar entre 0 e 59</string>
    <string name="preencha_CampoCC">Preencha o Campo CC</string>
    <string name="CampoCC_invalido">Campo CC tem de conter 8 dígitos</string>
    <string name="erro_inserir_pessoa">Erro ao inserir pessoa</string>
    <string name="erro_alterar_pessoa">Erro ao alterar pessoa</string>
    <string name="pessoa_guardado_sucesso">Pessoa guardado com sucesso</string>

    <string name="versao">Covid v. 1.0</string>
    <string name="data_nascimento">Data Nascimento</string>
    <string name="lista_de_enfermeiros">Lista de Enfermeiros</string>
    <string name="lista_de_pessoas">Lista de Pessoas</string>
    <string name="lista_de_vacinas">Lista de Vacinas</string>
    <string name="menu_doses">Doses</string>
    <string name="imagem_inicial">imagem_inicial</string>
    <string name="pessoa">Pessoa:</string>
    <string name="data_item_dose">Data:</string>
    <string name="hora_itemDose">Hora:</string>
    <string name="n_mero_dose">Número Dose:</string>
    <string name="enfermeiro_itemDose">Enfermeiro:</string>
    <string name="vacina_itemDose">Vacina:</string>
    <string name="lista_de_doses">Lista De Doses</string>

</resources>