<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_nova_dose"
        android:icon="@android:drawable/ic_input_add"
        android:orderInCategory="100"
        android:title="@string/novo"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_alterar_dose"
        android:icon="@android:drawable/ic_menu_edit"
        android:orderInCategory="101"
        android:title="@string/alterar"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_eliminar_dose"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="102"
        android:title="@string/eliminar"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="103"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>