<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="pt.ipg.trabalho_final.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="pt.ipg.trabalho_final.ui.enfermeiros.EnfermeirosFragment"
        android:label="@string/menu_enfermeiros"
        tools:layout="@layout/fragment_enfermeiros" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="pt.ipg.trabalho_final.ui.pessoas.PessoasFragment"
        android:label="@string/menu_pessoas"
        tools:layout="@layout/fragment_pessoas" />
</navigation>